...
      'Please enter a valid credit card number.';

  @override
  String get invalidDateError => 'Please enter a valid date.';

  @override
  String get invalidEmailError => 'Please enter a valid email address.';

  @override
  String get invalidIpError => 'Please enter a valid IP address.';

  @override
  String get invalidJsonError => 'Please enter valid JSON.';
...
  }

  @override
  String get mustBeTrueError => 'This field must be checked.';

  @override
  String get requiredFieldError => 'This field is required.';

  @override
  String requiredWhenFieldNotEmptyError(String fieldName) {
    return 'This field is required when $fieldName is not empty.';
  }

...
