...
///   },
///   builder: (context, field) {
///     return TextFormField(
///       initialValue: field.value,
///       onChanged: field.updateValue,
///       decoration: InputDecoration(
///         labelText: 'Email',
///         errorText: field.displayError,
///         suffixIcon: field.isValidating ? CircularProgressIndicator() : null,
///       ),
///     );
///   },
/// )
...
